[project]
name = "simulation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gymnasium>=1.3.0",
    "matplotlib>=3.10.9",
    "mlagents-envs>=0.28.0",
    "numpy>=2.4.4",
    "pygame>=2.6.1",
    "pyzmq>=27.1.0",
    "tensorboard>=2.20.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
]
